unpackaged/main/default/objects/Case_Ownership_Change__c/Case_Ownership_Change__c.object-meta.xml
<CustomObject>
    <label>Case Ownership Change</label>
    <nameField>
        <label>Case Ownership Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Ownership Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>