unpackaged/main/default/objects/Case_Ownership_Change__c/fields/Date_Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Created</label>
    <type>DateTime</type>
</CustomField>