unpackaged/main/default/objects/Case_Ownership_Change__c/fields/New_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_Name__c</fullName>
    <label>New Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>