unpackaged/main/default/objects/Case_Ownership_Change__c/fields/Old_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner_Name__c</fullName>
    <label>Old Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>